--- a/MayBay/Views/KhachHang/Shared/_LayoutPage2.cshtml
+++ b/MayBay/Views/KhachHang/Shared/_LayoutPage2.cshtml
@@ -43,8 +43,16 @@
                     <li>@Html.ActionLink("Contact", "Contact", "KhachHang")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="~/LoginUser/Login"><span class="fa fa-user"></span> Login</a></li>
-                    <li><a href="@Url.Action("SignUp","LoginUser")">Register</a></li>
+                    @if (Session["TaiKhoan"] != null)
+                    {
+                        <a href="@Url.Action("LogOut", "User")" class="logout-text">Đăng xuất</a>
+                    }
+                    else
+                    {
+                        <li><a href="~/User/Login"><span class="fa fa-user"></span> Login</a></li>
+                        <li><a href="@Url.Action("SignUp","User")">Register</a></li>
+                    }
+
                 </ul>
             </div>
         </div>
