--- a/MayBay/Views/KhachHang/Details.cshtml
+++ b/MayBay/Views/KhachHang/Details.cshtml
@@ -107,13 +107,13 @@
 
             <div class="col-md-6">
                 <fieldset>
-                    <label for="departure">Ngày nhận phòng:</label>
+                    <label for="departure">Ngày bay:</label>
                     <input name="deparure" id="deparure" type="date" class="form-control date01" min="@DateTime.Now.ToString("yyyy-MM-dd")" placeholder="Select date..." required="">
                 </fieldset>
             </div>
             <div class="col-md-6">
                 <fieldset>
-                    <label for="return">Ngày trả phòng:</label>
+                    <label for="return">Ngày về:</label>
                     <input name="return" id="return" disabled type="date" class="form-control date01" min="@DateTime.Now.ToString("yyyy-MM-dd")" placeholder="Select date..." required="">
                 </fieldset>
             </div>
