--- a/MayBay/Views/Cart/DatHang.cshtml
+++ b/MayBay/Views/Cart/DatHang.cshtml
@@ -3,63 +3,112 @@
 @model List<Cart>
 @{
     ViewBag.Title = "DatHang";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-    var customer = Session["UserKH"] as AccountInfo;
+    Layout = "~/Views/KhachHang/Shared/_LayoutPage3.cshtml";
+    var data = Session["UserKH"] as AccountInfo;
 }
-<h2 style="text-align:center">THÔNG TIN GIỎ HÀNG</h2>
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>Mã Chuyến Bay</th>
-            <th>Mã Máy Bay</th>
-            <th>Mã Tuyến Bay Bay</th>
+<style>
+    .container {
+        max-width: 960px;
+        margin: 0 auto;
+    }
 
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var cart in Model)
-        {
-        <tr>
-            <td>@cart.MaCB</td>
-            <td>@cart.MaMB</td>
-            <td>@cart.MaTBay</td>
+    .cart-table img {
+        max-width: 100px;   
+        max-height: 100px;
+    }
 
-            @*<td><img src="~/Images/@room.HinhAnh" style="width:100%" /></td>*@
+    .customer-info-table td {
+        font-weight: bold;
+    }
+</style>
 
-        </tr>
-        }
-        <tr style="font-weight:bold; text-align:right; color:red;">
-        </tr>
-    </tbody>
-    <tr>
-        <td colspan="2" style="text-align: center;">
-            @Html.ActionLink("ĐỒNG Ý ĐẶT HÀNG", "DongYDatHang", null, new
-            { @class = "btn btn - primary" })
-        </td>
-    </tr>
-</table>
-@*<h2 style="text-align:center">THÔNG TIN KHÁCH HÀNG</h2>*@
-@*<table class="table table-bordered">
-    <tr>
-        <td>Họ tên: </td>
-        <td>@customer.FullName</td>
-    </tr>
-    <tr>
-        <td>Địa chỉ: </td>
-        <td>@customer.Address</td>
-    </tr>
-    <tr>
-        <td>Điện thoại: </td>
-        <td>@customer.PhoneNumber</td>
-    </tr>
-    <tr>
-        <td>Ngày đặt: </td>
-        <td>@DateTime.Now.ToShortDateString()</td>
-    </tr>
-    <tr>
-        <td colspan="2" style="text-align: center;">
-            @Html.ActionLink("ĐỒNG Ý ĐẶT HÀNG", "DongYDatHang", null, new
-            { @class = "btn btn - primary" })
-        </td>
-    </tr>
-</table>*@
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h2 style="text-align:center">THÔNG TIN GIỎ HÀNG</h2>
+            <table class="table table-bordered cart-table">
+                <thead>
+                    <tr>
+                        <th>Mã Chuyến Bay</th>
+                        <th>MaMB</th>
+                        <th>Ảnh Phòng</th>
+                       
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var cart in Model)
+                    {
+                        <tr>
+                            <td>@cart.MaCBay</td>
+                            <td>@cart.MaMB</td>
+                           
+                        </tr>
+                    }
+                    <tr style="font-weight:bold; text-align:right; color:red;">
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h2 style="text-align:center">THÔNG TIN KHÁCH HÀNG</h2>
+            <table class="table table-bordered customer-info-table">
+                <tr>
+                    <td>Họ tên: </td>
+                    <td>@data.TenKH</td>
+                </tr>
+                <tr>
+                    <td>Địa chỉ Email: </td>
+                    <td>@data.Email</td>
+                </tr>
+                <tr>
+                    <td>Điện thoại: </td>
+                    <td>@data.SDT</td>
+                </tr>
+                <tr>
+                    <td>Ngày đặt: </td>
+                    <td>@DateTime.Now.ToShortDateString()</td>
+                </tr>
+               
+                <tr>
+                    <td colspan="2" style="text-align: center;">
+                        @Html.ActionLink("ĐỒNG Ý ĐẶT PHÒNG", "DongYDatHang", null, new { @class = "btn btn-primary" })
+                    </td>
+                </tr>
+
+            </table>
+            <script>
+                $(function () {
+                    $("#btnDongYDatHang").on("click", function () {
+                        var ngayNhanPhong = $("#ngayNhanPhong").val();
+                        var ngayTraPhong = $("#ngayTraPhong").val();
+
+                        if (ngayNhanPhong === "" || ngayTraPhong === "") {
+                            alert("Vui lòng nhập đầy đủ thông tin ngày nhận và ngày trả phòng.");
+                            return false;
+                        }
+                        $.ajax({
+                            type: "POST",
+                            url: "/CartController/DongYDatHang",
+                            data: {
+                                ngayNhanPhong: ngayNhanPhong,
+                                ngayTraPhong: ngayTraPhong
+                                // Thêm các dữ liệu khác cần thiết
+                            },
+                            success: function (data) {
+                                // Xử lý kết quả trả về nếu cần
+                                console.log(data);
+                            },
+                            error: function (error) {
+                                // Xử lý lỗi nếu có
+                                console.log(error);
+                            }
+                        });
+                    });
+                });
+            </script>
+        </div>
+    </div>
+</div>
