--- a/MayBay/Views/KhachHang/Details.cshtml
+++ b/MayBay/Views/KhachHang/Details.cshtml
@@ -3,18 +3,17 @@
 
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/KhachHang/Shared/_LayoutPage3.cshtml";
 }
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chi Tiết Chuyến Bay</title>
+    <title>Chi Tiết Phòng</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f1f8ff;
         }
 
         header {
@@ -32,36 +31,14 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .room-image {
             max-width: 100%;
-            border: 1px solid #ccc;
-            margin-top: 10px;
         }
 
         .room-info {
             margin-top: 20px;
-        }
-
-        h2 {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        p {
-            margin-bottom: 10px;
-        }
-
-        .form-control {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
         }
 
         .book-button {
@@ -80,7 +57,7 @@
 </head>
 <body>
     <header>
-        <h1>Chi Tiết Chuyến Bay</h1>
+        <h1>Xem Chi Tiết Chuyến Bay </h1>
     </header>
     <div class="room-details">
         @if (Model != null)
@@ -89,45 +66,40 @@
             <a href="@Url.Action("Details", "KhachHang", new { id = Model.MaCB })">
                 <img class="room-image" src="~/hinh/@(imageFileName).jpg" alt="Room Image 1" width="300" height="200">
             </a>
+         
             <div class="room-info">
-                @{
-                    string[] roomTypes = new string[] { "normal", "Vip", "Superior Deluxe", "luxury" };
-                    Random random = new Random();
-                    string randomRoomName = roomTypes[random.Next(roomTypes.Length)];
-                }
 
-                <h2>Tên chuyến bay: @randomRoomName</h2>
-
-                <p>Giá: $</p>
-
+                <h2>Mã Chuyến Bay: @Model.MaCB</h2>
+                <p>Mã Tuyến Bay: @Model.MaTBay</p>
+                
+                <p>Thời Gian Bay: @Model.ThoiGianBay</p>
+                <p>Ngày Giờ: @Model.NgayGio</p>
+                <p>Số Ghế Hàng 1: @Model.SoLuongGheHang1</p>
+                <p>Số Ghế Hàng 2: @Model.SoLuongGheHang2</p>
+                <p>Số Ghế Hàng 3: @Model.SoLuongGheHang3</p>
                 <p>
-                    Mô tả: Bay đến nơi, về đến nơi!
+                    Tình trạng:  @Model.TinhTrang
                 </p>
             </div>
 
-            <div class="col-md-6">
-                <fieldset>
-                    <label for="departure">Ngày bay:</label>
-                    <input name="deparure" id="deparure" type="date" class="form-control date01" min="@DateTime.Now.ToString("yyyy-MM-dd")" placeholder="Select date..." required="">
-                </fieldset>
-            </div>
-            <div class="col-md-6">
-                <fieldset>
-                    <label for="return">Ngày về:</label>
-                    <input name="return" id="return" disabled type="date" class="form-control date01" min="@DateTime.Now.ToString("yyyy-MM-dd")" placeholder="Select date..." required="">
-                </fieldset>
-            </div>
 
-            <a class="book-button" href="@Url.Action("AddTicketToCart", "Cart", new { MaCB = Model.MaCB })" onclick="redirectToCart()">
-                Đặt vé
+
+
+            <a class="btn btn-primary" href="@Url.Action("AddTicketToCart", "Cart", new { MaCB = Model.MaCB })" onclick="redirectToCart()">
+                Đặt Vé
             </a>
 
+          
             <script>
-                function redirectToCart() {
-                    window.location.href = '@Url.Action("HienThiGioHang", "Cart")';
-                }
+     function redirectToCart() {
+                window.location.href = '@Url.Action("HienThiGioHang", "Cart")';
+            }
+
             </script>
+
         }
     </div>
+
+
 </body>
-</html>
+</html> 
