--- a/MayBay/Areas/Admin/Views/ChuyenBays/Index.cshtml
+++ b/MayBay/Areas/Admin/Views/ChuyenBays/Index.cshtml
@@ -68,7 +68,7 @@
 </style>
 
 <div class="list-title">
-    <h1>List of Hotels</h1>
+    <h1>Danh Sách Chuyến Bay</h1>
 </div>
 
 <div style="text-align: right; margin-bottom: 10px;">
