--- a/MayBay/Views/Cart/DatHang.cshtml
+++ b/MayBay/Views/Cart/DatHang.cshtml
@@ -82,7 +82,7 @@
                
                 <tr>
                     <td colspan="2" style="text-align: center;">
-                        @Html.ActionLink("ĐỒNG Ý ĐẶT Vé", "DongYDatHang", null, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("ĐỒNG Ý ĐẶT VÉ", "DongYDatHang", null, new { @class = "btn btn-primary" })
                     </td>
                 </tr>
 
