--- a/MayBay/Views/Cart/HienThiGioHang.cshtml
+++ b/MayBay/Views/Cart/HienThiGioHang.cshtml
@@ -115,6 +115,6 @@
     </div>
 
     <div class="checkout-btn">
-        <a href="@Url.Action("DSachCB", "KhachHang")" class="btn btn-primary">Đi đến đặt phòng</a>
+        <a href="@Url.Action("DSachCB", "KhachHang")" class="btn btn-primary">Đi đến đặt vé</a>
     </div>
 </div></html>
