--- a/MayBay/Areas/Admin/Views/TuyenBays/Index.cshtml
+++ b/MayBay/Areas/Admin/Views/TuyenBays/Index.cshtml
@@ -85,11 +85,11 @@
 </style>
 
 <div class="list-title">
-    <h1>Danh Sách Khách Sạn</h1>
+    <h1>Danh Sách Tuyến Bay </h1>
 </div>
 
 <p>
-    @Html.ActionLink("Thêm khách sạn mới", "Create", null, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Thêm Tuyến Bay mới", "Create", null, new { @class = "btn btn-primary" })
 </p>
 
 <div class="row">
@@ -98,21 +98,21 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-header">
-                    @Html.DisplayFor(modelItem => item.hotel_name)
+                    @Html.DisplayFor(modelItem => item.MaTBay)
                 </div>
                 <div class="card-body">
-                    <img src="/Images/@item.ImageName" alt="@item.hotel_name" class="hotel-image" />
+                   
                     <div class="hotel-details">
-                        @Html.DisplayFor(modelItem => item.address)
+                        @Html.DisplayFor(modelItem => item.SanBayDen)
                     </div>
                     <div class="hotel-details">
-                        @Html.DisplayFor(modelItem => item.phone_number)
+                        @Html.DisplayFor(modelItem => item.SanBayDi)
                     </div>
                 </div>
                 <div class="card-footer">
                     <div class="action-links">
-                        @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.hotel_id }, new { @class = "btn btn-outline-primary" }) |
-                        @Html.ActionLink("Xóa", "Delete", new { id = item.hotel_id }, new { @class = "btn btn-outline-danger" }) |
+                        @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.MaTBay }, new { @class = "btn btn-outline-primary" }) |
+                        @Html.ActionLink("Xóa", "Delete", new { id = item.MaTBay }, new { @class = "btn btn-outline-danger" }) |
                     </div>
                 </div>
             </div>
